--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,7 @@ body {
 
 .logo{
     text-decoration: none;
-
+    font-family: 'Raleway';
 font-style: normal;
 font-weight: 700;
 font-size: 26px;
